# django-field-audit

./: .coveragerc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: coverage.yml  pypi.yml  tests.yml  verify-changelog.yml
example/: manage.py
field_audit/: __init__.py  apps.py  auditors.py  const.py  field_audit.py  global_context.py  middleware.py  models.py  services.py  utils.py
field_audit/management/commands/: bootstrap.py  bootstrap_field_audit_events.py
field_audit/migrations/: 0001_initial.py  0002_add_is_bootstrap_column.py  0002_alter_auditevent_changed_by.py  0003_alter_auditevent_change_context_and_more.py
scripts/: make-coverage-badge.py  update-coverage-badge.sh  verify-changelog-version.py
tests/: __init__.py  django_setup.py  exceptions.py  mocks.py  models.py  settings.py  test_apps.py  test_auditors.py  test_bootstrap.py  test_bootstrap_field_audit_events.py  test_django_compat.py  test_field_audit.py  test_global_disable.py  test_m2m.py  test_middleware.py  test_models.py  test_utils.py
