[project]
name = "django-field-audit"
authors = [
    {name = "Joel Miller", email = "jmiller@dimagi.com"},
    {name = "Simon Kelly", email = "simongdkelly@gmail.com"},
    {name = "Graham Herceg", email = "gherceg@dimagi.com"},
    {name = "Chris Smit", email = "chris.smit@dimagi.com"},
    {name = "Daniel Miller", email = "millerdev@gmail.com"},
]
description = "Audit Field Changes on Django Models"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = ["django>=3.2"]

[project.urls]
Homepage = "https://github.com/dimagi/django-field-audit"
Repository = "https://github.com/dimagi/django-field-audit"

[tool.flit.module]
name = "field_audit"

[tool.uv]
dev-dependencies = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "ruff",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--tb=short --strict-markers --strict-config"
python_files = ["tests.py", "test_*.py", "*_test.py"]
testpaths = ["tests"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]

[tool.ruff.format]
exclude = [
    "./build",
    ".venv",
]
